k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dancing-music
  labels:
    app: dancing-music
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: dancing-music
  template:
    metadata:
      labels:
        app: dancing-music
    spec:
      containers:
        - name: dancing-music
          image: ghcr.io/cyrildesch/dancing-music:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
