k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dancing-music
  labels:
    app: dancing-music
spec:
  selector:
    app: dancing-music
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
